[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["Michael G <michaelgray1219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
peewee = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
